--- a/PotionCollector/Packages/manifest.json
+++ b/PotionCollector/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables.android": "1.0.9",
     "com.unity.ai.navigation": "2.0.7",
     "com.unity.collab-proxy": "2.10.2",
     "com.unity.ide.rider": "3.0.36",
